--- a/index.html
+++ b/index.html
@@ -554,6 +554,12 @@
             el.style.color = (light < 75) ? '#fff' : '#7f1d1d';
           } catch (_) {}
         }
+        function getTagCount(tag){
+          try {
+            const key = tagKey(tag);
+            return (facets && facets.tagsCountNorm) ? (facets.tagsCountNorm[key]||0) : 0;
+          } catch(_) { return 0; }
+        }
 
         function renderFilters() {
           // Title input
@@ -739,7 +745,14 @@
               filtersChips.appendChild(c);
             };
             Array.from(filters.types).forEach(v => addChip('type', v, () => filters.types.delete(v)) );
-            Array.from(filters.tags).forEach(v => addChip('tag', v, () => filters.tags.delete(v)) );
+            Array.from(filters.tags).forEach(v => {
+              const cnt = (facets && facets.tagsCount && Object.prototype.hasOwnProperty.call(facets.tagsCount, v)) ? facets.tagsCount[v] : 0;
+              const lab = cnt ? `${v} (${cnt})` : v;
+              const c = document.createElement('span'); c.className = 'chip rem'; c.title = 'Rimuovi';
+              c.textContent = `tag: ${lab} x`;
+              c.onclick = () => { filters.tags.delete(v); renderFilters(); renderNotes(); };
+              filtersChips.appendChild(c);
+            });
             Array.from(filters.animals).forEach(v => addChip('animal', v, () => filters.animals.delete(v)) );
             Array.from(filters.methods).forEach(v => addChip('method', v, () => filters.methods.delete(v)) );
             if (!filters.types.size && !filters.tags.size && !filters.animals.size && !filters.methods.size) {
@@ -819,7 +832,8 @@
             for (const t of tags) {
               const c = document.createElement('span');
               c.className = 'chip tag';
-              c.textContent = t;
+              const cnt = getTagCount(t);
+              c.textContent = `${t} (${cnt})`;
               applyTagChipStyle(c, t);
               chips.appendChild(c);
             }
